# arithmetix

./: CMakeLists.txt  Jamfile  arithmetix.cpp  arithmetix.hpp  board.hpp  button.cpp  button.hpp  credits.cpp  credits.hpp  edit.hpp  event.cpp  event.hpp  font.cpp  font.hpp  game.cpp  game.hpp  hiscore.cpp  hiscore.hpp  main.cpp  queue.hpp  resource.cpp  resource.hpp  sdlw.cpp  sdlw.hpp  sdlw_audio.cpp  sdlw_audio.hpp  state.hpp  status.hpp  stb.cpp  title.cpp  title.hpp  todo.txt  transition.hpp
box/: buildbox.cpp
data/: test1.fnt
